--- a/www/css/index.css
+++ b/www/css/index.css
@@ -20,6 +20,11 @@
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
+header{
+    height: 10%;
+    
+}
+
 body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
@@ -58,32 +63,39 @@ body {
     border:none;
 }
 
-.app{
-    width:1024px;
-    height:768px;
+body{
+    width:100hw;
+    height:100vh;
     margin:0 auto;
+    background: url(../img/bg.jpg) no-repeat center top;
+    background-size: contain;
 }
 
-header{
-    height:120px;
-    background:rgba(0, 0, 0, 0.2);
+.app{
+    width:75vw;
+    height: 100vh;
+    margin:0 auto;
+    padding-top: 3vh;
 }
+
 
 #slot_machine
 {
-    width:920px;
-    margin:0 auto;
-    background:rgba(0, 0, 0, 0.4);
-    height:480px;
+    width:100%;
+    background: url(../img/bg_machine.png) no-repeat center top;
+    background-size: contain;
+    height: 500px;
+    margin-left: 30px;
+    margin-top: -20px;
 }
 
 #slots{
-    background:rgba(0, 0, 0, 0.6);
-    height:480px;
+    margin-top: 7px;
+    height:305px;
     float:left;
-    width:738px;
+    width:600px;
+    margin-left: 75px;
     display: block;
-    height:100%;
     overflow: hidden;
     position: relative;
 }
@@ -125,24 +137,23 @@ header{
 #slots ul>li{
     display:block;
     width:100%;
-    height:480px;
+    height:305px;
     text-align: center;
-    line-height: 480px;
+    line-height: 305px;
 }
 
 
 
-#slots>ul:nth-child(2n)
-{
-    margin:0 3%;
+#slots .jSlots-wrapper>ul:nth-child(2n){
+background: red;
 }
 
 #control{
-    background:rgba(0, 0, 0, 0.5);
-    width:180px;
+    width:100px;
+    margin-top: -160px;
     float:right;
     height:480px;
-    position:relative
+    position:relative;
 }
 
 #push:focus{
@@ -150,52 +161,64 @@ header{
     outline:none;
 }
 #push{
-    background:black;
-    width:30%;
-    left:35%;
+    background:url(../img/button.png) no-repeat center top;
+    background-size: 100%;
+    width:60%;
+    left:22%;
     top:10%;
     height:50%;
     position:absolute;
-    border-radius:30px;
     z-index: 200;
-    box-shadow: 10px 10px 1px rgba(0, 0, 0, 0.4);
+    
 }
 
-#push:before{
-    content:"";
-    position:absolute;
-    width:20%;
-    border-radius:15px;
-    height:7%;
-    top:9%;
-    left:25%;
-    background:#ccc;
-    box-shadow: 0px 0px 3px 3px #ccc;
 
-}
 
 #push.animate{
     -webkit-transition: all 0.3s ease-out;
     transition: top 0.3s  ease-out;
 }
 
-#control .bar{
- background:gray;
- width:15%;
- left:42%;
- top:50%;
- height:55%;
- position:absolute;
- border-radius:30px;
- box-shadow: inset 10px 0px 10px rgba(0, 0, 0, 0.4);
 
-}
 
 .jSlots-wrapper {  
     overflow: hidden; /* to hide the magic */  
     /*height: 20px;  whatever the height of your list items are   */
-    height:480px;
+    height:305px;
     width:100%;
     display: inline-block; /* to size width correctly, can use float too, or width*/  
 
+}
+
+
+img {
+    
+}
+
+.logo {
+    width:14.5%;
+    float: left
+    
+}
+
+#pontuacao
+{
+    width:80%;
+    padding-top: 40px;
+}
+
+#pontuacao li{
+    display: block;
+    float:left;
+    color:white;
+    font-size: 30px;
+    padding: 20px 60px;
+    text-align: center;
+    
+}
+
+#pontuacao li:nth-child(2n)
+{
+   padding-left:80px; 
+    padding-right:70px;
 }
